# humanizer

./: .gitignore  .yamlfmt.yaml  LICENSE  README.md  RELEASING.md  diagnose.bat  pyproject.toml  requirements-mypy.txt  run.bat  tox.ini
scripts/: generate-translation-binaries.sh  update-translations.sh
src/humanize/: __init__.py  _version.py
src/humanize/locale/ar/LC_MESSAGES/: humanize.po
src/humanize/locale/bn_BD/LC_MESSAGES/: humanize.po
src/humanize/locale/ca_ES/LC_MESSAGES/: humanize.po
src/humanize/locale/da_DK/LC_MESSAGES/: humanize.po
src/humanize/locale/de_DE/LC_MESSAGES/: humanize.po
src/humanize/locale/el_GR/LC_MESSAGES/: humanize.po
src/humanize/locale/eo/LC_MESSAGES/: humanize.po
src/humanize/locale/es_ES/LC_MESSAGES/: humanize.po
src/humanize/locale/eu/LC_MESSAGES/: humanize.po
src/humanize/locale/fa_IR/LC_MESSAGES/: humanize.po
src/humanize/locale/fi_FI/LC_MESSAGES/: humanize.po
src/humanize/locale/fr_FR/LC_MESSAGES/: humanize.po
src/humanize/locale/he_IL/LC_MESSAGES/: humanize.po
src/humanize/locale/hu_HU/LC_MESSAGES/: humanize.po
src/humanize/locale/id_ID/LC_MESSAGES/: humanize.po
src/humanize/locale/it_IT/LC_MESSAGES/: humanize.po
src/humanize/locale/ja_JP/LC_MESSAGES/: humanize.po
src/humanize/locale/ko_KR/LC_MESSAGES/: humanize.po
src/humanize/locale/nb/LC_MESSAGES/: humanize.po
webapp/: main.py  requirements.txt
webapp/static/css/: style.css
webapp/templates/: ai_humanize.html  base.html  datetime.html  filesize.html  index.html  integers.html  scientific.html
(+15 files in other folders)
